# P2-ML-TESTING-Labeling-Data-ingestion-f

./: .gitignore  README.md  pyproject.toml  run_pipeline.py  run_train.py  run_training.py
data/: auto_labeled  manual_review  manually_labeled_all labeled.csv
src/Labeling_data_ingestion/: config.py  run_pipeline.py
src/Labeling_data_ingestion/data_handler/: import_data.py  process_data.py
src/Labeling_data_ingestion/models/: model.py
src/Labeling_data_ingestion/models/sklearn_models/: readme.txt  sk_models.py  threshold_classifier.py  transformer.py
src/Labeling_data_ingestion/models/transformer/: readme.txt
src/Labeling_data_ingestion/predict/: sklearn_predict.py
src/Labeling_data_ingestion/train/: readme.txt  train.py  train_TFIDF.py  train_sklearn.py
visual_evaluation/: Untitled.ipynb  evaluation.ipynb
